go/pkg/infaas-dispatcher/test-cluster-prep/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: apple-service
  namespace: idcs-system
spec:
  hosts:
    - "*"
  gateways:
    - apple-gateway
  http:
    - match:
        - uri:
            prefix: /apples
      route:
        - destination:
            host: apple-service
            port:
              number: 5678
